2015-11-25 Riccardo Mottola <rm@gnu.org>

	* configure
	* configure.ac
	* config.h.in
	Specifically check for X11/extensions/sync.

	* Headers/x11/XGServer.h
	* Headers/x11/XGServerWindow.h
	* Source/x11/XGServer.m
	* Source/x11/XGServerEvent.m
	* Source/x11/XGServerWindow.m
	Enable Sync only on explicit presence of sync.h, not just Xext.


2015-11-13  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerWindow.m (_setupRootWindow, window::::):
	Create an empty app icon window before eventually checking the
	window frame offsets when using WindowMaker. This fixes the issue
	that the first GNUstep application started under WindowMaker did
	not get a proper application menu.

2015-11-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (-processEvent:): For repeated keys
	only eat up the KeyRelease events and pass on all KeyPress.

2015-10-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-GSReadRect:, -DPSimage:..:):
	Drawing speedup for slow machines.
	Patch by Josh Freeman <gnustep_lists@twilightedge.com>

2015-10-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (-processEvent:): Move repeate key
	detection from process_key_event() to here to enable filtering out
	keyUp events as Cocoa does.

2015-10-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/gsc/GSContext.m: Set some defaults.

2015-10-03  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSGState.h
	* Source/gsc/GSContext.m
	* Source/gsc/GSGState.m
	* Source/cairo/CairoGState.m
	Implement per gstate methods for antialias, patternPhase and
	compositingOperation.

2015-09-20  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m: Preliminary support for anti alias
	setting for path drawing.

2015-08-13  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (process_char):
	Fix bug that caused F11 keypresses to become F12.
	Patch by Adam Fox <adam.fox@testplant.com>

2015-06-05  Fred Kiefer <FredKiefer@gmx.de>
